--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,9 +32,9 @@ services:
       - "./config/cron/crontabs/root:/etc/cron.d/root"
       - "./config/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf"
       - "./composer/auth.json:/root/.composer/auth.json:delegated"
-      - "./composer/auth.json:/app/var/composer_home/auth.json:delegated"
+        #      - "./composer/auth.json:/app/var/composer_home/auth.json:delegated"
       - "~/.composer/cache:/root/.composer/cache:delegated"
-      - "~/.composer/cache:/app/var/composer_home/cache:delegated"
+        #      - "~/.composer/cache:/app/var/composer_home/cache:delegated"
     env_file: ./config/common.env
     environment:
       - "VERBOSE:true"
